--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,27 @@ body {
   width: 100%;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+/* make the arrow bounce */
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
 div#main {
   display: flex;
   flex-direction: column;
@@ -122,4 +143,14 @@ a:hover {
 img.socialIcon {
   height: 30px;
   width: 30px;
+}
+
+/* add a slide In Left animation */
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
